Update doc structure

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,33 @@
-fontawesome:   https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
+title:         "Bulma-Extensions"
+description:   "Set of missing Bulma.io functionalities provided as SASS / JaviScript extensions."
+env:           "production"
 
-exclude: [bulma/]
-includes_dir: bulma/docs/_includes
+# Build
+
+markdown:      kramdown
+permalink:     pretty
+url:           https://wikiki.github.io
+exclude:       ['bulma', icons', 'node_modules', 'templates', '.babelrc', 'bulma-docs.sass', 'docker-compose.yml', 'package.json', 'yarn.lock']
+
+# Icons
+
+fontawesome:   https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
+iconic:        https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic.min.css
+ionicons:      https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css
+mdi:           https://cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css
+
+# Variables
+
+download:      https://github.com/wikiki/bulma-extensions/releases/download/0.2.3/bulma-extensions-0.2.3.zip
+github:        https://github.com/wikiki/bulma-extensions
+version:       0.2.3
+
+includes:
+- assets/js
+- bulma/docs/_includes
+
+exclude:
+- bulma
 
 sass:
   sass_dir: /
