--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikiki.github.io",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "description": "Set of extensions for Bulma.io CSS Framework",
   "main": "index.html",
   "scripts": {
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/Wikiki/bulma-extensions#readme",
   "devDependencies": {
-    "bulma": "^0.6.2",
+    "bulma": "latest",
     "bulma-extensions": "latest"
   }
 }
